Spot Lamp "Show Cone" + Curve displays a view-port with a darker cone and darker objects within the cone. #43605

Closed
opened 2015-02-09 10:09:59 +01:00 by Dom · 9 comments

System Information
Windows 7 (64-bit) / Intel Core2 Duo / 4GB Ram / ATI Mobility Radeon HD 3670

Blender Version
Broken: (2.73a bbf09d9)

Short description of error
The .blend file contains a scene with a spot lamp, a curve (Path) within the cone of the lamp and 3 cubes. While the curve is within the cone of the spot lamp, any objects that intersect the cone are displayed with a darker shade. If the curve is deselected, the shading reverts back to normal (lighter shade of the cone). If the curve is moved outside the cone, the shading will revert to normal for the most part. I sometimes had to move the curve "off screen" for the shading to revert to normal. This affects the solid, texture and material modes of view-port rendering.

Exact steps for others to reproduce the error
Blender_Spot_Bug.blend

Using the default Scene (Cycles, BI or Game) add a Spot lamp.
Move / size the lamp so the cube is encompassed by the cone.
Enable "Show Cone" within the Spot lamp.
Add a curve and the objects and Spot lamp cone become darker
Deselect, delete or move the curve away from the Spot lamp cone and the shading reverts to normal.

**System Information** Windows 7 (64-bit) / Intel Core2 Duo / 4GB Ram / ATI Mobility Radeon HD 3670 **Blender Version** Broken: (2.73a bbf09d9) **Short description of error** The .blend file contains a scene with a spot lamp, a curve (Path) within the cone of the lamp and 3 cubes. While the curve is within the cone of the spot lamp, any objects that intersect the cone are displayed with a darker shade. If the curve is deselected, the shading reverts back to normal (lighter shade of the cone). If the curve is moved outside the cone, the shading will revert to normal for the most part. I sometimes had to move the curve "off screen" for the shading to revert to normal. This affects the solid, texture and material modes of view-port rendering. **Exact steps for others to reproduce the error** [Blender_Spot_Bug.blend](https://archive.blender.org/developer/F142049/Blender_Spot_Bug.blend) Using the default Scene (Cycles, BI or Game) add a Spot lamp. Move / size the lamp so the cube is encompassed by the cone. Enable "Show Cone" within the Spot lamp. Add a curve and the objects and Spot lamp cone become darker Deselect, delete or move the curve away from the Spot lamp cone and the shading reverts to normal.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Little_Ceasar

Added subscriber: @Little_Ceasar
Author

This is not a show stopper by any means and I'm not sure if this is the intended behavior. It just seemed a little odd to me. Thanks for all the work improving the Blender experience!

This is not a show stopper by any means and I'm not sure if this is the intended behavior. It just seemed a little odd to me. Thanks for all the work improving the Blender experience!
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Eeek, @Little_Ceasar, better leave bug triaging to us. In this case the report went by unnoticed for two weeks because of that. Not blaming you or so, but I have to notify you about this ;)

Eeek, @Little_Ceasar, better leave bug triaging to us. In this case the report went by unnoticed for two weeks because of that. Not blaming you or so, but I have to notify you about this ;)
Julian Eisel self-assigned this 2015-02-23 22:52:15 +01:00
Author

Thank you for the update! I tried to cover all the bases when doing the report (my first one!), but I guess I missed a step. Thanks again!

Thank you for the update! I tried to cover all the bases when doing the report (my first one!), but I guess I missed a step. Thanks again!

This issue was referenced by 9ab28727ac

This issue was referenced by 9ab28727ac94f537acb8fdd84dd7298acc44d5ab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9ab28727ac.

Closed by commit 9ab28727ac.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43605
No description provided.