Fix T43605: Spot Cone+Curve creates odd shadow

Curves could leave glFrontFace in an unknown state.